jre 1.8 support added